# echo_bazel

./: .bazelrc  .gitmodules  BUILD  BUILD.bazel  Makefile  README.md  WORKSPACE  clang.bazelrc  setup_clang.sh  user.bazelrc
main/: BUILD  BUILD.bazel  liburing_wrapper.h  main.cc
utils/: BUILD  utils.cc  utils.h
